# SoftRenderer

./: CMakeLists.txt
src/: app.cpp  color.h  main.cpp  model.cpp  model.h
src/core/: Settings.h  Stats.h  camera.cpp  camera.h  math_utils.cpp  math_utils.h  mesh.cpp  mesh_loader.cpp  mesh_loader.h  rasterizer.cpp  rasterizer.h  renderer.cpp  renderer.h  texture.cpp  texture_loader.cpp  texture_loader.h  types.h
src/platform/: input.cpp  input.h  sdl_app.cpp  sdl_app.h  sdl_texture.cpp  sdl_texture.h
src/ui/: ui_layer.cpp  ui_layer.h
